# SCVISUALS

./: .gitignore  build-native.ps1  build.gradle  com_mojang_blaze3d_systems_RenderSystem.txt  game_renderer_disasm.txt  gradle.properties  net_minecraft_client_gui_GuiGraphicsExtractor.txt  net_minecraft_client_gui_Gui_1DisplayEntry.txt  net_minecraft_client_gui_Gui_1DisplayEntry_constructors.txt  net_minecraft_client_gui_components_EditBox.txt  net_minecraft_network_chat_Component.txt  net_minecraft_network_chat_MutableComponent.txt  net_minecraft_network_chat_contents_PlainTextContents.txt  settings.gradle
native/: CMakeLists.txt  README.md  scvis_native.cpp
scripts/: fetch_events.py
src/client/java/: summary.txt
src/client/java/com/jagrosh/discordipc/: DiscordIPC.java  IPCClient.java  IPCListener.java  RichPresence.java
src/client/java/dev/redstones/mediaplayerinfo/: IMediaSession.java  MediaInfo.java  MediaPlayerInfo.java
src/client/java/lombok/: Generated.java  NonNull.java
src/client/java/moscow/rockstar/: ReflectTest.java  Rockstar.java
src/client/java/moscow/rockstar/protection/: ClientSession.java  HwidNative.java
src/client/java/moscow/rockstar/scratch/: Test.java
src/client/java/moscow/rockstar/utility/: CustomParticle.java
src/client/resources/assets/rockstar/textures/: COMPASS_TEXTURE_NEEDED.txt
src/main/java/moscow/rockstar/: MainSourceSetAnchor.java
src/main/resources/: fabric.mod.json  rockstar.accesswidener  rockstar.mixins.json
src/main/resources/assets/rockstar/: sounds.json
src/main/resources/assets/rockstar/lang/: en_us.lang  (+3 more)
(+568 files in other folders)
